<resources>
    <string name="app_name">Gazetta</string>
    <string name="test_image">Test Image</string>
    <string name="see_details_button">See details</string>

    <!-- Tabs strings -->
    <string name="business_tab">Business</string>
    <string name="entertainment_tab">Entertainment</string>
    <string name="general_tab">General</string>
    <string name="health_tab">Health</string>
    <string name="science_tab">Science</string>
    <string name="sports_tab">Sports</string>
    <string name="technology_tab">Technology</string>
</resources>
